--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -7,13 +7,13 @@
 body {
 font-size: 16px;
 line-height: 32px;
-font-family: /* Ubuntu, sans-serif */;
-color: /* #xxxxxx */;
+font-family: Verdana, arial;
+color: #000000;
 }
 
 h1 {
 font-size: /* x.xrem  (rem is a unit of measure) */;
-color: /* #xxxxxx */;
+color: #000000;
 }
 
 h2 {
@@ -25,12 +25,12 @@ border-bottom: 1px solid #bbb;
 header, main, footer {
 margin: 1.25rem auto;
 padding: .5rem;
-max-width: /* xxxpx (px = pixel is a unit of measure)  */;
+max-width: 200px ;
 }
 
 header, footer, footer a {
 text-align: center;
-background-color: /* */;
+background-color: #256970;
 color: whitesmoke;
 }
 
