--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -12,12 +12,12 @@ color: #000000;
 }
 
 h1 {
-font-size: /* x.xrem  (rem is a unit of measure) */;
+font-size: 2rem;
 color: #000000;
 }
 
 h2 {
-font-size: /* x.xrem */;
+font-size: 2rem;
 text-align: center;
 border-bottom: 1px solid #bbb;
 }
@@ -41,5 +41,5 @@ float: right;
 }
 
 footer {
-font-size: /* smaller */;
+font-size: 1rem;
 }
