--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -7,7 +7,7 @@
 body {
 font-size: 16px;
 line-height: 32px;
-font-family: Verdana, arial;
+font-family: Verdana, Arial, san-serif ;
 color: #000000;
 }
 
@@ -35,7 +35,7 @@ color: whitesmoke;
 }
 
 header img {
-width: /*  */;
+width: 200px;
 height: auto;
 float: right;
 }
