--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -2,7 +2,7 @@
 /* You may use #HEX or color names */
 
 /* * is a wildcard referring to all elements. */
-* { margin: 0; box-sizing: border-box; }
+* { margin: 0; box-sizing 10: border-box 15; }
 
 body {
 font-size: 16px;
