--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -18,24 +18,24 @@ color: #000000;
 
 h2 {
 font-size: 2rem;
-text-align: left;
+text-align: center;
 border-bottom: 1px solid #bbb;
 }
 
 header, main, footer {
 margin: 1.25rem auto;
 padding: .5rem;
-max-width: 200px ;
+max-width: 700px ;
 }
 
 header, footer, footer a {
-text-align: left;
+text-align: center;
 background-color: #256970;
 color: whitesmoke;
 }
 
 header img {
-width: 200px;
+width: 700px;
 height: auto;
 float: right;
 }
