--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -5,41 +5,44 @@
 * { margin: 0; box-sizing: border-box; }
 
 body {
-font-size: 16px;
-line-height: 32px;
-font-family: /* Ubuntu, sans-serif */;
-color: /* #xxxxxx */;
+    font-size: 16px;
+    line-height: 32px;
+    font-family: Verdana, Arial, san-serif ;
+    color: #000000;
 }
 
 h1 {
-font-size: /* x.xrem  (rem is a unit of measure) */;
-color: /* #xxxxxx */;
+    font-size: 2rem;
+    color: #ffffff;
 }
 
 h2 {
-font-size: /* x.xrem */;
-text-align: center;
-border-bottom: 1px solid #bbb;
+    font-size: 2rem;
+    text-align: center;
+    border-bottom: 1px solid #bbb;
 }
 
 header, main, footer {
-margin: 1.25rem auto;
-padding: .5rem;
-max-width: /* xxxpx (px = pixel is a unit of measure)  */;
+    margin: 1.25rem auto;
+    padding: .5rem;
+    max-width: 700px ;
 }
 
 header, footer, footer a {
-text-align: center;
-background-color: /* */;
-color: whitesmoke;
+    text-align: center;
+    background-color: #99ceff;
+    width: 700px;
+    height: auto;
+    float: right;
+    color: whitesmoke;
 }
 
 header img {
-width: /*  */;
-height: auto;
-float: right;
+    width: 200px;
+    height: auto;
+    float: right;
 }
 
 footer {
-font-size: /* smaller */;
+    font-size: 1rem;
 }
