--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 /* CIT 230 - Assignment Portal CSS Template */
 /* You may use #HEX or color names */
 
@@ -34,7 +34,7 @@ header, footer, footer a {
     background-color: #99ceff;
     width: 700px;
     height: auto;
-    float: right;
+    float: center;
     color: whitesmoke;
 }
 
@@ -47,53 +47,3 @@ header img {
 footer {
     font-size: 1rem;
 }
-=======
-/* CIT 230 - Assignment Portal CSS Template */
-/* You may use #HEX or color names */
-
-/* * is a wildcard referring to all elements. */
-* { margin: 0; box-sizing: border-box; }
-
-body {
-font-size: 16px;
-line-height: 32px;
-font-family: Verdana, Arial, san-serif ;
-color: #000000;
-}
-
-h1 {
-font-size: 2rem;
-color: #ffffff;
-}
-
-h2 {
-font-size: 2rem;
-text-align: center;
-border-bottom: 1px solid #bbb;
-}
-
-header, main, footer {
-margin: 1.25rem auto;
-padding: .5rem;
-max-width: 700px ;
-}
-
-header, footer, footer a {
-text-align: center;
-background-color: #99ceff;
-width: 700px;
-height: auto;
-float: right;
-color: whitesmoke;
-}
-
-header img {
-width: 200px;
-height: auto;
-float: right;
-}
-
-footer {
-font-size: 1rem;
-}
->>>>>>> d81e0c0c3013f63e30e42477c7358dba20e3a5cb
