--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -41,7 +41,7 @@ header, footer, footer a {
 header img {
     width: 200px;
     height: auto;
-    float: right;
+    float: center;
 }
 
 footer {
