--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -27,6 +27,7 @@ header, main, footer {
     margin: 1.25rem auto;
     padding: .5rem;
     max-width: 700px ;
+    float: center;
 }
 
 header, footer, footer a {
