--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -42,7 +42,7 @@ header, footer, footer a {
 header img {
     width: 200px;
     height: auto;
-    float: center;
+    float: right;
 }
 
 footer {
