--- a/cit230/assignments/lesson-7/styles/main-7.css
+++ b/cit230/assignments/lesson-7/styles/main-7.css
@@ -4,8 +4,11 @@
 * { box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
 
 body {
+
     font-size: 16px;
+
     font-family: arial, sans-serif;
+
     margin-top: 20px;
 }
 
@@ -15,29 +18,32 @@ h1, h2, h3 {
 }
 
 header, nav, main, footer {
+
     max-width: 1000px;
+
     margin: auto;
 }
 
 header {
 
     display: flex;
-    justify-content: ;
+
     flex-wrap: row, wrap;
-
-
 
 }
 
 header img {
 
     height: 70px;
+
     position: relative;
+
     bottom: 13px;
 }
 
 
 header h1 {
+
     color: #323232;
 
     font-family: 'Quando', serif;
@@ -48,16 +54,13 @@ header h1 {
 }
 
 header h2 {
+
     display: inline;
 
     font-size: 20px;
 
     font-style: italic;
 }
-
-
-
-
 
 
 .hamburger { display: block;position: absolute;top: 2.0rem;right: 1.25rem; }
@@ -71,11 +74,7 @@ header h2 {
     .hamburger { display: none; }
     .navigation {   background-color: #000; overflow: hidden;   text-align: center; }
     .navigation li { display: inline-block; }
-
-
 }
-
-
 
 
 nav ul {
@@ -85,8 +84,8 @@ nav ul {
     list-style-position: inside;
 
     padding: 0;
-    margin: auto;
 
+    margin: auto;
 }
 
 nav li {
@@ -104,7 +103,6 @@ nav li {
     text-align: center;
 
     padding: 14px 16px;
-
 }
 
 nav a:link {
@@ -131,6 +129,7 @@ nav a:active {
 }
 
 main {
+
     border: 2px;
 
     border-style: solid;
@@ -141,24 +140,30 @@ main {
 }
 
 .weatherPhoto {
+
     display: inline-grid;
+
     grid-template-columns: 1fr 1fr 1fr;
+
     text-align: center;
-
-
 }
 
 .weatherPhoto figure:hover {
+
     box-shadow: 3px 3px 3px 3px;
+
     border: 2px solid #262626;
 }
 
 .weatherPhoto figure{
-    margin: 10px;
-    padding: 2%;
-    padding-bottom: 10%;
-    border: 2px solid #000;
 
+    margin: 10px;
+
+    padding: 2%;
+
+    padding-bottom: 10%;
+
+    border: 2px solid #000;
 }
 
 
@@ -170,8 +175,11 @@ main h2 {
 
 main figure { margin: 0 0 .2rem 2%; width:96%; }
 main figure img {
+
     float: left;
+
     display: inline-flex;
+
     max-width: -webkit-fill-available;
 }
 
@@ -189,28 +197,24 @@ article {
 
     max-width: -webkit-fill-available;
 
-
     display: inline-block;
-
-
 }
 
 article img {
 
     float: left;
+
     max-width: inherit;
-
-
 }
 
-.town-article {
-
-
-}
+.town-article {}
 
 footer {
+
     text-align: center;
+
     background-color: #d2d2d2;
+
     border: 2px;
 
     border-style: solid;
@@ -219,9 +223,12 @@ footer {
 }
 
 .footer-bar {
-    background-color: #323232;
-    color: #fff;
-    padding: 10px;
-    margin-bottom: 20px;
 
+    background-color: #323232;
+
+    color: #fff;
+
+    padding: 10px;
+
+    margin-bottom: 20px;
 }
