--- a/cit230/assignments/lesson-10/styles/main-10.css
+++ b/cit230/assignments/lesson-10/styles/main-10.css
@@ -1,29 +1,19 @@
-
 /* { box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
 
 body {
 
     font-size: 16px;
-
     font-family: arial, sans-serif;
 
     margin-top: 40px;
-
     max-width: 1000px;
-
     margin:auto;
-
     margin-top: 40px;
-
 }
 
 h1, h2, h3 {
+
     font-family: 'Quando', serif;
-
-}
-
-header, nav, main, footer {
-
 }
 
 header {
@@ -35,53 +25,39 @@ header {
 header img {
 
     height: 70px;
-
     position: relative;
-
     bottom: 12px;
-
 }
 
 
 header h1 {
 
     color: #323232;
-
     font-family: 'Quando', serif;
-
     font-size: 55px;
-
     display:inline;
 }
 
 header h2 {
 
     display: inline;
-
     font-size: 20px;
-
     font-style: italic;
 }
 
 .hamburger {
 
     display: block;
-
     position: absolute;
-
     top: 2.0rem;
-
     right: 1.25rem;
 }
 
 .navigation {
 
     list-style: none;
-
     padding-left: 0;
-
     margin: 0;
-
 }
 
 .navigation li { display: none; }
@@ -114,45 +90,33 @@ li a.active {
 
 /* Main Stuff */
 
+figure.banners { margin: 0 0 .2rem 2%; width:50%; }
+
 main {
 
     border: 2px solid #323232;
-
     padding: 15px;
-
     background-color: #f5f2f2;
 }
-
-main h1 {
-
-}
-
-main figure { margin: 0 0 .2rem 2%; width:50%; }
 
 main figure img {
 
     float: left;
-
     display: inline-flex;
-
     max-width: -webkit-fill-available;
 }
-
 
 
 article {
 
     padding: 20px;
-
     max-width: -webkit-fill-available;
-
     display: inline-block;
 }
 
 article img {
 
     float: left;
-
     max-width: inherit;
 }
 
@@ -167,30 +131,23 @@ article img {
 footer {
 
     text-align: center;
-
     background-color: #f5f2f2;
-
     border: 2px;
-
     border-style: solid;
-
     border-color: #323232;
-
     padding-bottom: 10px;
 }
 
 .contact {
+
     padding: 10px;
 }
 
 .footer-bar {
 
     background-color: #138eaf;
-
     color: #fff;
-
     padding: 10px;
-
     margin-bottom: 20px;
 }
 
@@ -198,47 +155,42 @@ footer {
 
 .weatherPhoto {
 
-    display: inline-grid;
-
-    grid-template-columns: 1fr 1fr 1fr;
-
-    text-align: center;
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 20px;
 }
 
 .weatherPhoto figure:hover {
 
     box-shadow: 3px 3px 3px 3px;
-
     border: 2px solid #262626;
 }
 
 .weatherPhoto figure{
 
-    margin: 10px;
-
     padding: 2%;
-
-    padding-bottom: 10%;
-
     border: 2px solid #000;
+}
 
-    max-width: 1000px;
+figcaption {
 
-    margin: auto;
+    font-family: 'Quando', serif;
+    text-align: center;
+    margin-top: 10px;
 }
 
 
 /* Storm Center */
 
 legend {
+
     font-family: 'Quando';
-
     font-size: 30px;
-
     font-weight: bold;
 }
 
 .reQ:after {
+
     color: red;
     content:"*";
 }
@@ -246,9 +198,7 @@ legend {
 label {
 
     color: #323232;
-
     display: flex;
-
     padding: 1%;
 }
 
@@ -283,31 +233,23 @@ label {
 /* Home Page */
 
 .towns {
+
     display: flex;
-
-
 }
 
 .towns h2 {
+
     color: #157890;
-
 }
-.towns h3 {
 
-}
-.towns p {
-
-}
 .towns ul {
 
     list-style-type: square;
-
 }
 
 .towns article {
 
     border: 2px solid #323232;
-
     border-radius: 20px;
 }
 
@@ -316,15 +258,10 @@ label {
 .weather-summary {
 
     width: 30%;
-
     border: 2px solid #000;
-
     border-radius: 20px;
-
     padding: 20px;
-
     display: inline-block;
-
     margin-left: 25px;
 }
 
