--- a/cit230/assignments/lesson-5/styles/medium-5.css
+++ b/cit230/assignments/lesson-5/styles/medium-5.css
@@ -1,9 +1,7 @@
-@media only screen and (min-width: ___________) {
+@media only screen and (min-width: 35rem) {
 
 /* Only CSS write declarations that need to be changed. Do not duplicated declarations that are already established in the main.css */
 
-nav button { display:none; }  /* hamburger button does not need to be shown in the medium on up views */
-
-section.forecast { ______ }  /* show the 10-day forecast with the medium view and up */
+nav button { display:none; }
 
 }
