--- a/cit230/assignments/lesson-9/styles/main-9.css
+++ b/cit230/assignments/lesson-9/styles/main-9.css
@@ -121,7 +121,7 @@ main h2 {
 
 }
 
-main figure { margin: 0 0 .2rem 2%; width:96%; }
+/* main figure { margin: 0 0 .2rem 2%; width:96%; } */
 
 main figure img {
 
@@ -193,11 +193,11 @@ footer {
 
 .weatherPhoto {
 
-    display: inline-grid;
+    display: grid;
 
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: auto;
 
-    text-align: center;
+    grid-gap: 20px;
 }
 
 .weatherPhoto figure:hover {
@@ -209,19 +209,19 @@ footer {
 
 .weatherPhoto figure{
 
-    margin: 10px;
-
     padding: 2%;
 
-    padding-bottom: 10%;
-
     border: 2px solid #000;
-
-    max-width: 1000px;
-
-    margin: auto;
 }
 
+figcaption {
+
+    font-family: 'Quando', serif;
+
+    text-align: center;
+
+    margin-top: 10px;
+}
 
 /* Storm Center */
 
