--- a/cit230/assignments/weathersite/styles/main.css
+++ b/cit230/assignments/weathersite/styles/main.css
@@ -1,6 +1,3 @@
-
-/* { box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
-
 body {
 
     font-size: 16px;
@@ -18,18 +15,13 @@ body {
 }
 
 h1, h2, h3 {
+
     font-family: 'Quando', serif;
-
-}
-
-header, nav, main, footer {
-
 }
 
 header {
 
     display: inline-flex;
-
 }
 
 header img {
@@ -81,16 +73,18 @@ header h2 {
     padding-left: 0;
 
     margin: 0;
-
 }
 
 .navigation li { display: none; }
 
 li a.active {
+
     background-color: #138eaf;
+
     font-weight: bold;
+
     color: #fff;
-    }
+}
 
 /* Media Queries */
 
@@ -99,7 +93,6 @@ li a.active {
     .responsive li { background-color: #323232;	display: block; width: 100%; margin: 2px 0;	border: 1px solid #696565; }
     .responsive li a {	padding: 1rem; text-align: center;	display: block; text-decoration:none; color: #fff;}
     .responsive li a:hover { background-color: #138eaf;  }
-    
 }
 
 @media only screen and (min-width: 37.5em) {
@@ -114,6 +107,8 @@ li a.active {
 
 /* Main Stuff */
 
+figure.banners { margin: 0 0 .2rem 2%; width:50%; }
+
 main {
 
     border: 2px solid #323232;
@@ -123,12 +118,6 @@ main {
     background-color: #f5f2f2;
 }
 
-main h1 {
-
-}
-
-main figure { margin: 0 0 .2rem 2%; width:50%; }
-
 main figure img {
 
     float: left;
@@ -137,7 +126,6 @@ main figure img {
 
     max-width: -webkit-fill-available;
 }
-
 
 
 article {
@@ -159,9 +147,10 @@ article img {
 .town-article {
 
     display: flex;
-    padding-left: 20px;
-    text-align: justify;
 
+    padding-left: 20px;
+
+    text-align: justify;
 }
 
 footer {
@@ -180,6 +169,7 @@ footer {
 }
 
 .contact {
+
     padding: 10px;
 }
 
@@ -198,11 +188,11 @@ footer {
 
 .weatherPhoto {
 
-    display: inline-grid;
+    display: grid;
 
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: auto;
 
-    text-align: center;
+    grid-gap: 20px;
 }
 
 .weatherPhoto figure:hover {
@@ -214,23 +204,25 @@ footer {
 
 .weatherPhoto figure{
 
-    margin: 10px;
-
     padding: 2%;
 
-    padding-bottom: 10%;
-
     border: 2px solid #000;
+}
 
-    max-width: 1000px;
+figcaption {
 
-    margin: auto;
+    font-family: 'Quando', serif;
+
+    text-align: center;
+
+    margin-top: 10px;
 }
 
 
 /* Storm Center */
 
 legend {
+
     font-family: 'Quando';
 
     font-size: 30px;
@@ -239,7 +231,9 @@ legend {
 }
 
 .reQ:after {
+
     color: red;
+
     content:"*";
 }
 
@@ -284,24 +278,15 @@ label {
 
 .towns {
     display: flex;
-
-
 }
 
 .towns h2 {
     color: #157890;
-
 }
-.towns h3 {
 
-}
-.towns p {
-
-}
 .towns ul {
 
     list-style-type: square;
-
 }
 
 .towns article {
