--- a/cit230/assignments/lesson-7/styles/main-7.css
+++ b/cit230/assignments/lesson-7/styles/main-7.css
@@ -110,13 +110,15 @@ main {
     padding: 15px;
 }
 
+/* Gallery Page */
+
 .weatherPhoto {
 
-    display: inline-grid;
+    display: grid;
 
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: auto;
 
-    text-align: center;
+    grid-gap: 20px;
 }
 
 .weatherPhoto figure:hover {
@@ -128,13 +130,18 @@ main {
 
 .weatherPhoto figure{
 
-    margin: 10px;
-
     padding: 2%;
 
-    padding-bottom: 10%;
-
     border: 2px solid #000;
+}
+
+figcaption {
+
+    font-family: 'Quando', serif;
+
+    text-align: center;
+
+    margin-top: 10px;
 }
 
 main h2 {
@@ -143,7 +150,7 @@ main h2 {
 
 }
 
-main figure { margin: 0 0 .2rem 2%; width:96%; }
+/* main figure { margin: 0 0 .2rem 2%; width:96%; } */
 main figure img {
 
     float: left;
