--- a/cit230/assignments/weathersite/styles/medium.css
+++ b/cit230/assignments/weathersite/styles/medium.css
@@ -1,3 +1,4 @@
+/* Medium */
 @media only screen and (min-width: 35.5em) {
 
     nav button {
@@ -78,5 +79,4 @@
         display: inline;
 
     }
-
 }
