--- a/thedavidlaws/styles/main.css
+++ b/thedavidlaws/styles/main.css
@@ -383,3 +383,51 @@ label {
     from {opacity: .4}
     to {opacity: 1}
 }
+
+.winter i{
+    font-family: 'quando', serif;
+    text-align: center;
+    color: gray;
+    font-size: 14px;
+}
+
+.links{
+
+    text-decoration: none;
+
+    font-weight: bold;
+
+    color: #ca2565;
+}
+
+figure img {
+
+    margin-bottom: 10px;
+
+}
+
+figcaption {
+
+    /* border */
+    border: 2px solid #6b3869;
+    border-radius: 15px;
+
+    /* text */
+    font-family: 'quando', serif;
+    font-size: 18px;
+    font-weight: bold;
+
+    /* color */
+    background-color: #6b3869;
+    color: #fff;
+
+    /* other */
+    padding: 5px;
+}
+
+.downloads {
+
+    text-align: justify;
+
+    margin-top: 40px;
+}
