--- a/thedavidlaws/styles/main.css
+++ b/thedavidlaws/styles/main.css
@@ -431,3 +431,44 @@ figure img {
 
     margin-top: 40px;
 }
+
+.gridPro {
+
+    display: flex;
+
+    flex-flow: row wrap;
+
+    grid-template-columns: 10px;
+
+    text-align: center;
+
+}
+
+.gridPro figure{
+
+    margin: 10px;
+
+    padding: 8px;
+
+    /* border: 2px solid #000; */
+
+    max-width: 750px;
+
+    margin: auto;
+
+}
+
+.gridPro figure img {
+
+    max-width: 200px;
+
+}
+
+.gridPro figcaption {
+
+    flex-flow: wrap;
+
+    max-width: 200px;
+
+}
+
