--- a/thedavidlaws/styles/main.css
+++ b/thedavidlaws/styles/main.css
@@ -18,7 +18,7 @@ h1, h2, h3 {
 
 header, main, footer {
 
-    max-width: 1000px;
+    max-width: 1500px;
 
     margin: auto;
 }
@@ -68,6 +68,17 @@ nav {
     padding: 5px;
 
 }
+
+li a.active {
+
+    background-color: #6b3869;
+
+    font-weight: bold;
+
+    color: #fff;
+
+}
+
 .navigation {
 
     list-style: none;
@@ -77,6 +88,8 @@ nav {
     background-color: #292929;
 
     text-align: left;
+
+    width: 105px;
 
 }
 
@@ -89,6 +102,8 @@ nav {
     padding: .8rem;
 
     text-decoration: none;
+
+    padding-left: .5em;
 
 }
 
@@ -173,27 +188,68 @@ footer {
 
     text-align: center;
 
+    color: #020100;
+
     background-color: #6C376A;
 
     /* border: 2px solid #323232; */
 
-    padding-top: 30px;
+    padding-top: 2px;
 
-    padding-bottom: 2px;
+    padding-bottom: 20px;
 
 }
 
 .footer-bar {
 
-    background-color: #4e2c4d;
+    /* background-color: #4e2c4d; */
 
     color: #fff;
 
-    padding: 10px;
+    padding
 
-    margin-bottom: 30px;
 
 }
+
+
+.navTwo {
+
+    text-align: center;
+
+    font-weight: bold;
+
+    padding-left: 0;
+
+}
+
+.navTwo li {
+
+    display: inline-block;
+}
+
+.navTwo a {
+
+    display: block;
+
+    color: #eee;
+
+    padding: .4rem;
+
+    text-align: center;
+
+    text-decoration: none;
+}
+
+.navTwo a:hover {
+
+    color: #6b3869;
+
+    background-color: #f5f5f5;
+
+    border-radius: 10px;
+
+}
+
 
 /* Contact Page */
 
@@ -511,4 +567,3 @@ figure img {
     color: #fff;
 
 }
-
