--- a/thedavidlaws/styles/styleguide.css
+++ b/thedavidlaws/styles/styleguide.css
@@ -104,7 +104,6 @@ footer {
 
 .footer-bar {
     color: #fff;
-    padding
 }
 
 
@@ -147,7 +146,7 @@ footer {
 
 /* True for all headings */
 h1, h2, h3 ,h4, h5, h6{
-    color: #;
+    color: #292929;
 }
 
 
@@ -246,7 +245,7 @@ a:active{
 
 /* Paragraph Styles */
 p{
-    color:;
+    color: #292929;
     /* Other paragraph styles */
 }
 
@@ -313,17 +312,6 @@ figure img {
 
     text-decoration: none;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 /* ------------------------------------- */
 /* --------- Style Guide CSS ----------- */
